--- a/MyFancyToDoList.Web/Views/ToDoList/Delete.cshtml
+++ b/MyFancyToDoList.Web/Views/ToDoList/Delete.cshtml
@@ -27,6 +27,14 @@
             @Html.DisplayFor(model => model.DueDate)
         </dd>
 
+        <dt>
+            @Html.DisplayNameFor(model => model.IsReOccuring)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.IsReOccuring)
+        </dd>
+
     </dl>
 
     @using (Html.BeginForm()) {
