--- a/MyFancyToDoList.Web/Views/ToDoList/Details.cshtml
+++ b/MyFancyToDoList.Web/Views/ToDoList/Details.cshtml
@@ -25,6 +25,13 @@
         <dd>
             @Html.DisplayFor(model => model.DueDate)
         </dd>
+        <dt>
+            @Html.DisplayNameFor(model => model.IsReOccuring)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.IsReOccuring)
+        </dd>
 
     </dl>
 </div>
