--- a/MyFancyToDoList.Web/Views/ToDoList/Details.cshtml
+++ b/MyFancyToDoList.Web/Views/ToDoList/Details.cshtml
@@ -39,3 +39,10 @@
     @Html.ActionLink("Edit", "Edit", new { id = Model.Id }) |
     @Html.ActionLink("Back to List", "Index")
 </p>
+
+<p>
+    @Html.ActionLink("Add New Sub Task To Do ", "Create")
+</p>
+
+
+
